Correction mobile code

--- a/MH-FiorellaTheme5/source/stylesheets/styles.css
+++ b/MH-FiorellaTheme5/source/stylesheets/styles.css
@@ -196,7 +196,7 @@ p{
 @media only screen and ( max-width: 768px ) {
   /* footer */
 
-    .btn-slider, .btn-call-action{
+  .btn-slider, .btn-call-action{
     font-size: 16px;
     height: 40px;
     width: 175px;
@@ -427,7 +427,7 @@ p{
     display: none;
   }
 
-  .category-list {
+  .mobile-category-list {
     background-color: #FFFFFF;
     height: auto;
     margin:0;
@@ -436,7 +436,7 @@ p{
     width: 100%;
   }
 
-  .category-list .category-container {
+  .mobile-category-list .category-container {
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -445,13 +445,25 @@ p{
     position: relative;
   }
 
-  .category-list .category-container img {
+  .mobile-category-list .category-container img {
     height: auto;
     margin-bottom: 10px;
     max-width: 95%;
   }
 
-  .category-list .category-container .category-text-block{
+  .mobile-category-list .category-container:nth-child(1) img {
+    content:url("/images/home/bouquets_home_mobil.jpg");
+  }
+
+  .mobile-category-list .category-container:nth-child(2) img {
+    content:url("/images/home/boutonniere_home_mobil.jpg");
+  }
+
+  .mobile-category-list .category-container:nth-child(3) img {
+    content:url("/images/home/centerpieces_home_mobil.jpg");
+  }
+
+  .mobile-category-list .category-container .category-text-block{
     color: white;
     left: 50%;
     padding-left: 20px;
@@ -467,7 +479,7 @@ p{
 @media only screen and ( min-width: 769px ) {
 
   /*<CategoryList>*/
-  .category-list {
+  .mobile-category-list {
     display: none;
   }
 
